# clickhouse-worker

./: README.md  pyproject.toml
clickhouse_worker/: __init__.py  client.py
tests/: test_client.py
