[project]
name = "clickhouse-worker"
version = "0.2.4"
description = "Small reusable ClickHouse helpers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse_connect>=0.15.1",
    "pandas>=3.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
